# feishu-doc-tools

./: .env  .env.example  .gitattributes  .gitignore  CHANGELOG_v0.2.1.md  FEISHU_MCP_ALIGNMENT.md  OAUTH_APP_STATUS_ISSUE.md  OAUTH_SCOPE_PERMISSION_ISSUE.md  OAUTH_V2_MIGRATION.md  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  RECURSIVE_SEARCH_COMPLETE.md  REFRESH_TOKEN_FIX.md  STATE_FIX_REPORT.md  STATE_FIX_TEST_GUIDE.md  TENANT_TO_USER_AUTH_MIGRATION.md  TODO.md  TROUBLESHOOT_STATE_PARAMETER.md  USER_AUTH_FIX_SUMMARY.md  pyproject.toml  requirements.txt  scope_test_urls.json  tags  test_oauth_url.py  test_scope_permissions.py
.serena/: project.yml
.serena/memories/: architecture_patterns.md  checkpoint-2025-01-18-phase2-complete.md  code_style_conventions.md  create-wiki-space-implementation.md  download-ux-enhancement-2026-01-18.md  feishu-api-format-fix.md  feishu-api-implementation-notes.md  md-to-feishu-phase1-complete.md  phase1-download-implementation-2026-01-18.md  phase2-implementation-details.md  project-status.md  project_overview.md  session-2025-01-18-phase2-ux-improvements.md  session-2026-01-17-whiteboard-implementation.md  (+7 more)
dev/: app_status_checklist.json
docs/: API_OPERATIONS.md  BATCH_OPERATIONS.md  BITABLE_OPERATIONS.md  BUGFIX_SUMMARY.md  DESIGN.md  DIRECT_API_MODE.md  DOWNLOAD_EXAMPLES.md  DOWNLOAD_FUNCTION_REVIEW.md  DOWNLOAD_GUIDE.md  DOWNLOAD_SCRIPTS_COMPARISON.md  FEISHU_MCP_INTEGRATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CN.md  INDEX.md  NOTIFICATION_DESIGN.md  NOTIFICATION_DESIGN_V2.md  PERFORMANCE_OPTIMIZATION.md  PHASE2_PLAN.md  QUICK_START.md  RECURSIVE_SEARCH_FEATURE.md  TROUBLESHOOTING.md  UNIFIED_SEMANTICS_SUMMARY.md  USAGE.md
examples/: sample.md
lib/: feishu_api_client.py  feishu_md_uploader.py  wiki_operations.py
scripts/: batch_create_docs.py  batch_create_wiki_docs.py  create_feishu_doc.py  create_wiki_doc.py  diagnose_app_status.py  diagnose_auth_flow.py  diagnose_oauth.py  diagnose_refresh_token.py  download_doc.py  download_doc_old.py  download_wiki.py  download_wiki.py.backup  feishu_to_md.py  get_root_info.py  get_user_id_by_contact.py  list_folders.py  list_wiki_tree.py  md_table_to_bitable.py  md_to_feishu.py  md_to_feishu_upload.py  setup_user_auth.py  test_api_connectivity.py  test_refresh_token_update.py  update_docs.py  update_project_name.py  update_scripts_epilog.py  verify_state_fix.py  verify_user_auth.py
tests/: test_feishu_api_extended.py  test_md_to_feishu.py  test_notification_performance.py  test_performance.py  test_recursive_search.py  test_table_to_bitable.py  test_user_auth.py
(+53 files in other folders)
