[project]
name = "feishu-doc-tools"
version = "0.2.0"
description = "Feishu document management tools - batch creation/download, Wiki, Bitable, and migration"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
license = {text = "MIT"}

dependencies = [
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    # Notification system dependencies
    "httpx>=0.24.0",                # Modern HTTP client for async notifications
    "pydantic>=2.0.0",              # Configuration management and validation
    "pydantic-settings>=2.0.0",     # Environment variable integration
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
feishu-doc-tools = "scripts.md_to_feishu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "lib", "notifications"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=scripts --cov=lib --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
